Generate the website with JBake

--- a/content/partnership-guidelines.adoc
+++ b/content/partnership-guidelines.adoc
@@ -1,21 +1,27 @@
+= Partnership guidelines
+:jbake-type: normalBase
+:jbake-description: Host a BeJUG meeting.
+:jbake-priority: 1.0
+:showtitle:
+
 The BeJUG is always looking for more partners that want to host one of our meetups.
 This document describes what we are looking for.
 We would love it if you drop us a message here on meetup if you are interested in hosting.
 
-## What is the (BeJUG) ?
+== What is the (BeJUG) ?
 
 The primary focus of The Belgium Java User Group (founded in 1997 by Stephan Janssen) is to inform our members about the Java ecosystem.
 We regularly organise sessions for Java and JVM interested developers, devops and teamleads to socialize, learn and inspire.
 
-## What does a session look like?
+== What does a session look like?
 
 At a BeJUG Meetup, usually one or two speakers give a talk about a Java-related topic.
 Afterwards, informal mingling and socializing is a big aspect of the event.
 Alternative sessions such as workshops, hackergardens and unconf-discussions are also possible, but not the main focus.
 
-## What do we need from a Meetup Host?
+== What do we need from a Meetup Host?
 
-To facilitate the Meetups, we have need a place to gather.
+To facilitate the Meetups, we need a place to gather.
 We are looking for partners to provide us a location. Typically these are companies with a JVM focussed development team.
 A partner should be able to provide:
 
@@ -26,18 +32,18 @@ A partner should be able to provide:
 
 Additional aspects such as reachability, accessibility and are a plus.
 
-## What's in it for you as a host?
+== What's in it for you as a host?
 
 - We bring speakers to your company, which provides your employees to learn from others outside "your bubble";
 - Members of our meetup will visit the location you provide, which associates your company with being an active member of the Java Community;
 - A big thank you during the introduction and ending of the event;
 - When announcing the event, your company name will be included in the announcement (with social links @PARTNER_NAME)
 
-## What does JUG Belgium do?
+== What does JUG Belgium do?
 
 We invite the speakers, setup the invite mailing and registration form.
 
-## What are some other aspects a prospective partner should know about?
+== What are some other aspects a prospective partner should know about?
 
 - The Meetup is organized as a "Belgian Java User Group"-event, not a "<PARTNER_NAME> event";
 - All attendees must register through the Meetup group. This helps us to expand the group and gives structure to the signup process;
