Add new logo and clarify partnership-guidelines.adoc

--- a/content/partnership-guidelines.adoc
+++ b/content/partnership-guidelines.adoc
@@ -22,7 +22,7 @@ Alternative sessions such as workshops, hackergardens and unconf-discussions are
 == What do we need from a Meetup Host?
 
 To facilitate the Meetups, we need a place to gather.
-We are looking for partners to provide us a location. Typically these are companies with a JVM focussed development team.
+We are looking for partners to provide us a location. Typically, these are companies with a JVM focussed development team.
 A partner should be able to provide:
 
 - (Required) A place for our speakers to present their session (beamer/screen, HDMI connection, internet)
@@ -30,23 +30,27 @@ A partner should be able to provide:
 - (Optional) Drinks
 - (Optional) Food
 
-Additional aspects such as reachability, accessibility and are a plus.
+Additional aspects such as reachability and accessibility are a plus.
 
 == What's in it for you as a host?
 
 - We bring speakers to your company, which gives your employees the opportunity to learn from others outside "your bubble";
 - Members of our meetup will visit the location you provide, which associates your company with being an active member of the Java Community;
-- A big thank you during the introduction and ending of the event;
-- When announcing the event, your company name will be included in the announcement (with social links @PARTNER_NAME);
+- A big thank you during the introduction and ending of the event by a member of the BeJUG organisation;
+- When announcing the event and in all communication about the event afterwards, your company name will be included in the announcement (with social links @PARTNER_NAME);
 
-A member of the BeJUG will make sure the introduction and ending of the evening includes a mention of your company name.
+We believe the above provides a lot of value to you as a host.
 
-== What does JUG Belgium do?
+== What does Belgium JUG do?
 
-We invite the speakers, setup the invite mailing and registration form.
+We:
+
+- Search and invite the speakers: these are occasionally top speakers you could find at conferences like Devoxx!
+- Setup the invite mailing and registration form: we use Meetup.com for this.
 
 == What are some other aspects a prospective partner should know about?
 
 - The Meetup is organized as a "Belgian Java User Group"-event, not a "<PARTNER_NAME> event";
 - All attendees must register through the Meetup group. This helps us to expand the group and gives structure to the signup process;
 - As a default, we do not allow employees of the hosting company to present a full session that same evening. Exceptions may be made due to planning constraints;
+- For historical reasons and to not give a company any preferential treatment, we do not leave room for the hosting company to introduce themselves or present any sort of "promo" talk for the company;
