--- a/content/visit-belgium-tips.adoc
+++ b/content/visit-belgium-tips.adoc
@@ -12,60 +12,62 @@ During a call with BeJUG members, we collected a list of exciting places to shar
 
 ==== Zoo of Antwerp
 
-The [Zoo of Antwerp](https://www.zooantwerpen.be/en/) is the oldest animal park in the country and one of the oldest in the world, established on 21 July 1843. It's located in the city center, next to the central station.
+The https://www.zooantwerpen.be/en/[Zoo of Antwerp] is the oldest animal park in the country and one of the oldest in the world, established on 21 July 1843. It's located in the city center, next to the central station.
 
 ==== Flandria Boat / Waterbus
 
-*A [Flandria boat tour](https://flandria.nu/en/homepage-en/) is the perfect way to discover Antwerp and its world-class port from a different angle.*
+_A https://flandria.nu/en/homepage-en/[Flandria boat tour] is the perfect way to discover Antwerp and its world-class port from a different angle._
 
-[DeWaterbus](https://www.dewaterbus.be/en) is a cheaper alternative as it's more a public transport, that connects the center of Antwerp with the port and neighbouring cities like Kruibeke and Hemiksem.
+https://www.dewaterbus.be/en[DeWaterbus] is a cheaper alternative as it's more a public transport, that connects the center of Antwerp with the port and neighbouring cities like Kruibeke and Hemiksem.
 
 ==== Brewery De Koninck
 
-*The most fun adventure in Antwerp? A [tour through our City Brewery](https://www.dekoninck.be/en/interactive-tour)! That is not only a must-see, but especially a must-do due to the countless interactive experiences.*
+_The most fun adventure in Antwerp? A https://www.dekoninck.be/en/interactive-tour[tour through our City Brewery]! That is not only a must-see, but especially a must-do due to the countless interactive experiences._
 
 ==== The Playground
 
-For boardgame lovers! *Are you up for some games? Browse our collection of more than 400 games that you can play right here in [The Playground](https://www.facebook.com/theplaygroundx/). As a board game café and shop, our aim is to provide you with plenty of games to play, quality coffee, Belgian beers and more.*
+For boardgame lovers! _Are you up for some games? Browse our collection of more than 400 games that you can play right here in https://www.facebook.com/theplaygroundx/[The Playground]. As a board game café and shop, our aim is to provide you with plenty of games to play, quality coffee, Belgian beers and more._
 
 ==== Red Star Line Museum
 
-*Two million passengers made the crossing from Antwerp to North America aboard the steamships of the Red Star Line. Their story, that of the shipping company that transported them and that of the city and the port from which they departed, are central to the [Red Star Line Museum](https://redstarline.be/en)’s main exhibition.*
+_Two million passengers made the crossing from Antwerp to North America aboard the steamships of the Red Star Line. Their story, that of the shipping company that transported them and that of the city and the port from which they departed, are central to the https://redstarline.be/en[Red Star Line Museum]’s main exhibition._
 
 ==== MAS
 
-*The [MAS aims to be an international and pioneering museum](https://mas.be/) about the global connectedness between people and collections from different cultures and environments. With a river of tales, viewed from multiple perspectives, we engage everyone to be curious about the present, past and future of Antwerp and the world.*
+_The https://mas.be/[MAS aims to be an international and pioneering museum] about the global connectedness between people and collections from different cultures and environments. With a river of tales, viewed from multiple perspectives, we engage everyone to be curious about the present, past and future of Antwerp and the world._
 
 ==== Plantin-Moretus
 
-*In 1576, Plantin relocated his printing works to the Vrijdagmarkt. His family lived and worked there for three hundred years. They converted the ‘Gulden Passer’ (‘Golden Compasses’) into a beautiful mansion. The Moretus family cherished their [printing works, which had become a part of Antwerp’s heritage](https://museumplantinmoretus.be/en).*
+_In 1576, Plantin relocated his printing works to the Vrijdagmarkt. His family lived and worked there for three hundred years. They converted the ‘Gulden Passer’ (‘Golden Compasses’) into a beautiful mansion. The Moretus family cherished their https://museumplantinmoretus.be/en[printing works, which had become a part of Antwerp’s heritage]._
 
 === Across Belgium
 
 ==== Brugge and Gent
 
-The two cities [Brugge](https://www.visitbruges.be/en) and [Gent](https://visit.gent.be/en/see-do/inquiry-desk-visit-gent) are competing as they have the same values to offer: water and boats in the city, shopping streets, historical buildings,... Maybe best to visit both so you can make an informed choice for a next return visit?
+The two cities https://www.visitbruges.be/en[Brugge] and https://visit.gent.be/en/see-do/inquiry-desk-visit-gent[Gent] are competing as they have the same values to offer: water and boats in the city, shopping streets, historical buildings, ... Maybe best to visit both, so you can make an informed choice for a next return visit?
 
 ==== Pairi Daiza
 
-As "Probably The Best Zoo in Europe," [Pairi Daiza](https://www.pairidaiza.eu) is a must-see for animal lovers. It's on the other side of Belgium if you are in Antwerp, but hey, it's a tiny country ;-)
+As "Probably The Best Zoo in Europe," https://www.pairidaiza.eu[Pairi Daiza] is a must-see for animal lovers. It's on the other side of Belgium if you are in Antwerp, but hey, it's a tiny country ;-)
 
 ==== Belgian Coast
 
-[65 kilometer long stretch of sandy coastline with 15 resorts](https://www.belgium.be/en/about_belgium/tourism/the_coast). According to some the most beautiful coast line of the world, while others hate the many high buildings. We leave the verdict to you...
+_https://www.belgium.be/en/about_belgium/tourism/the_coast[65 kilometer long stretch of sandy coastline with 15 resorts]_.
+
+According to some the most beautiful coast line of the world, while others hate the many high buildings. We leave the verdict to you...
 
 == To Eat
 
 === Antwerp
 
-* [Takumi](https://takumiramennoodles.com/be/): Japanese noodles and Rice/Curry, multiple locations in the city.
-* [Little Seoul](https://www.littleseoul.be/en): Korean BBQ, more on the pricy side, city center.
-* [Bai Wei](http://www.baiweichineserestaurant.be/): Chinese noodles, chinatown district. The outside looks shabby, inside is ok, food = great.
-* [Curryosity](https://curryosity.be/): Indian curry. Bit off the beaten path but delicious.
-* [Amadeus](https://amadeus-resto.be/en/): all you can eat spareribes, multiple locations, themed "old-timey".
-* [Restaurant De Bomma](https://www.restaurantdebomma.be/): wholesome Belgian food.
-* [Falaffeltof](https://nl-nl.facebook.com/falafeltofantwerpen): fallafels, in case you want a simpler meal.
+* https://takumiramennoodles.com/be/[Takumi]: Japanese noodles and Rice/Curry, multiple locations in the city.
+* https://www.littleseoul.be/en[Little Seoul]: Korean BBQ, more on the pricy side, city center.
+* http://www.baiweichineserestaurant.be/[Bai Wei]: Chinese noodles, chinatown district. The outside looks shabby, inside is ok, food = great.
+* https://curryosity.be/[Curryosity]: Indian curry. Bit off the beaten path but delicious.
+* https://amadeus-resto.be/en/[Amadeus]: all you can eat spareribes, multiple locations, themed "old-timey".
+* https://www.restaurantdebomma.be/[Restaurant De Bomma]: wholesome Belgian food.
+* https://nl-nl.facebook.com/falafeltofantwerpen[Falaffeltof]: fallafels, in case you want a simpler meal.
 
 === Brussels
 
-* [Tram Experience](https://www.visit.brussels/en/visitors/where-to-eat/tram-experience): lets you be carried away on a surprising culinary journey in a unique and original atmosphere! Six renowned chefs invite you to discover their gastronomic universes of varied flavors and horizons. Seats are limited...
+* https://www.visit.brussels/en/visitors/where-to-eat/tram-experience[Tram Experience]: lets you be carried away on a surprising culinary journey in a unique and original atmosphere! Six renowned chefs invite you to discover their gastronomic universes of varied flavors and horizons. Seats are limited...
