#27 add distance antwerp-pairi daiza

--- a/content/visit-belgium-tips.adoc
+++ b/content/visit-belgium-tips.adoc
@@ -48,7 +48,7 @@ The two cities https://www.visitbruges.be/en[Brugge] and https://visit.gent.be/e
 
 ==== Pairi Daiza
 
-As "Probably The Best Zoo in Europe," https://www.pairidaiza.eu[Pairi Daiza] is a must-see for animal lovers. It's on the other side of Belgium if you are in Antwerp, but hey, it's a tiny country ;-)
+As "Probably The Best Zoo in Europe," https://www.pairidaiza.eu[Pairi Daiza] is a must-see for animal lovers. It's on the other side of Belgium if you are in Antwerp (about 100km), but hey, it's a tiny country ;-)
 
 ==== Belgian Coast
 
