feat: Added some PoI for Brussels.

--- a/content/visit-belgium-tips.adoc
+++ b/content/visit-belgium-tips.adoc
@@ -40,6 +40,25 @@ _The https://mas.be/[MAS aims to be an international and pioneering museum] abou
 
 _In 1576, Plantin relocated his printing works to the Vrijdagmarkt. His family lived and worked there for three hundred years. They converted the ‘Gulden Passer’ (‘Golden Compasses’) into a beautiful mansion. The Moretus family cherished their https://museumplantinmoretus.be/en[printing works, which had become a part of Antwerp’s heritage]._
 
+=== Brussels
+
+==== Comics Art Museum
+
+_Belgium is famous for its beers and french fries, but missing out on the  influence it had worldwide on the comics art. So it you love the ninth art, don't hesitate to book a tour at https://www.comicscenter.net/en/home[the museum]._
+
+==== Magritte Museum
+
+_Belgium was the home of lot of famous painters, but if you like surrealism, of just appreciate nice and relaxing painting, the https://musee-magritte-museum.be/en[Magritte Museum] is a great place to visit. As a bonus, it is located next to the royal palace (and other museums), if you want to expand your cultural expedition._
+
+==== Chez Cubitus
+
+_If you like playing boardgames while enjoying a fresh beer (or other non-alcoholic beverages), https://chezcubitus.be[this place] is probably for you._
+
+==== Cantillon Brewery
+
+_Did you know that real Gueuze can only be manufactured in Brussels due to a specific yeasts that only exist in the atmosphere of the city and its surroundings?
+If you like this of more acidic beers, or are just curious to discover how an ancestral blending process has evolved to these days, http://www.cantillon.be/[Cantillon Brewery] is surely a reference in that matter. Booking is required for the best experience._
+
 === Across Belgium
 
 ==== Brugge and Gent
@@ -72,6 +91,11 @@ According to some the most beautiful coast line of the world, while others hate 
 === Brussels
 
 * https://www.visit.brussels/en/visitors/where-to-eat/tram-experience[Tram Experience]: lets you be carried away on a surprising culinary journey in a unique and original atmosphere! Six renowned chefs invite you to discover their gastronomic universes of varied flavors and horizons. Seats are limited...
+* https://www.kokob.be[KoKoB]: Ethiopian food. Traditionally, you eat with your hands, but you can request cutlery too.
+* https://tapaslocas.be/[Tapas Locas]: The best place to eat tapas in Brussels, period.
+* https://schievelavabo.com[Schievelavabo]: Typical belgium tavern food. Several location.
+* https://tero.be/en/restaurants/tero-restaurant-brussels/[Tero]: Gastronomic restaurant with an emphasis on locally sourced ingredients. More on the pricey side.
+* https://wolf.be[Wolf]: A food market. Ideal for a group that can't agree on the type of food they want to eat. Can be a bit noisy during  high affluence.
 
 === Other Locations
 
